# AppsByClaude

./: IntellectualMentorship.md  README.md  timecard-app.jsx
Smart Momitor/: CMakeLists.txt  README.md  cfa_thermometer.ino  controller.h  display.h  excel_export.h  main.cpp  sd_storage.h  sensor.h  thermometer.h  timer.h
Smart Momitor/Beta-Test/: local.properties  settings.gradle.kts
Timecard App/: Timecard.html  promptlist.md
Timecard_App_2-0/: App.tsx  App.tsx.dark-bak  DARK_MODE_GUIDE.md  GoogleService-Info.plist  README.md  SETUP.md  UNREADME.md  app.json  firebase.json  google-services (1).json  google-services.json  jest.setup.js  package-lock.json  package.json
