cmake_minimum_required(VERSION 3.16)
project(CFAThermometer CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-result)
endif()

add_executable(cfa_therm main.cpp)
target_include_directories(cfa_therm PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
if(UNIX)
    target_link_libraries(cfa_therm pthread)
endif()
install(TARGETS cfa_therm DESTINATION bin)
